--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "password manager",
   "main": "server.ts",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/server.ts",
     "dev": "nodemon ./src/server.ts"
   },
   "author": "lbatista",
