--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.ts",
+    "start": "node dist/src/server.js",
     "dev": "nodemon ./src/server.ts"
   },
   "author": "lbatista",
