--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "password manager",
   "main": "server.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npx prisma migrate deploy",
     "start": "node dist/src/server.js",
     "dev": "nodemon ./src/server.ts"
   },
